--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+
+/* index page  */
 #logo-img{
     width: 10rem;
     height: 3rem;
@@ -9,15 +11,31 @@ nav{
 }
 
 .carousel-inner .carousel-item img{
-height: 90vh;
+height: 70vh;
 }
 
 .indivisual-card:hover{
-transform:scale(1.1);
+transform:scale(1.05);
+text-decoration: underline;
+cursor: pointer;;
 transition-timing-function: ease-in-out;
-transition-duration: 0.5s;
+transition-duration: 0.3s;
 }
 
+
+/* index blog section */
+
+.index-single-blog a{
+    text-decoration: none;
+
+   }
+   .index-single-blog:hover{
+   transform: scale(1.04);
+   text-decoration: underline;
+   transition-duration: 0.3s;
+   transition-timing-function: ease-in-out;
+
+   }
 
 /* footer */
 
@@ -86,33 +104,36 @@ footer .copyright a:hover{
     background-color: white;
 }
 
+/* team contaner */
+
 
 
 .team-main-div{
-display: flex; 
-justify-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2rem;
+  
 }
+
 
 .indivisual-team-member{
     height: 15rem;
     width: 15rem;
     margin: 20px 20px;
-    border-radius: 50%;
+   
+    
 
     
 }
 .team-photo{
-    height: 80%;
-    width: 80%;
+  
     border-radius: 50%;
-    background-color: red;
-    background-image: url(img/img.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .team-photo img{
-    height: 100%;
-    width: 100%;
+    width: 15rem;
+  height: 15rem;
+   
     border-radius: 50%;
     background-size: cover;
 }
@@ -134,6 +155,8 @@ justify-content: center;
     color: blue;
 }
 
+
+/* team section when resolution goes below 600px */
 @media screen and (max-width: 600px) {
     .team-main-div{
        display: flex;
@@ -143,16 +166,20 @@ justify-content: center;
     }
     .indivisual-team-member{
       text-align: center;
+      width: 100vw;
+      height: 100%;
     }
 }
 
 
+
+/* blog main page  */
 .main{
     background-color: white;
     padding: 1rem 1rem;
 }
 
-.popular-posts{
+.recent-posts{
     width: 100%;
     background-color: white;
     display: flex;
@@ -162,6 +189,28 @@ justify-content: center;
     
 }
 
+.recent-posts .card a:hover{
+    opacity: 0.5;
+    transition: opacity 0.3s;
+    text-decoration: underline;
+}
+
+.recent-posts a{
+    text-decoration: none;
+    color: black;
+}
+
+
+.category-posts a{
+text-decoration: none;
+color:black;
+}
+
+.category-posts a:hover{
+    opacity: .5;
+    transition: opacity 0.3s;
+    text-decoration: underline;
+}
 
 .post-img img{
    height:80%;
@@ -186,15 +235,100 @@ justify-content: center;
 
 .single-team-container{
     margin: 2rem 0rem;
-
+    padding: 1rem 4rem;
+  
 }
 
 .single-team-container:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition-duration: 0.9s;
 }
 
 .all-team-container a{
     text-decoration: none;
+}
+
+
+/* Services Page */
+ 
+.single-service-card{
+margin: 1.3rem 0;
+padding: 1rem 3rem;
+}
+
+
+.single-service-card:hover{
+transform: scale(1.03);
+transition-duration: 0.8s;
+transition-timing-function: ease-in-out;
+}
+
+
+/* Contact Us Page  */
+
+.form-container form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+.contact-info{
+    padding-top: 4rem;
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.single-blog-container{
+    padding: 1rem 4rem;
+}
+
+.single-team-container .card .team-img img{
+    width: 15rem;
+    height: 15rem;
+    border-radius: 50%;
+}
+
+.team-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* pagination of the blogs page */
+svg{
+    width: 20px; 
+    height: auto;
+}
+
+.pagination a{
+    text-decoration: none;
+}
+
+.pagination a:hover{
+   color:rgb(78, 78, 145);
+}
+
+.blog-img{
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.blog-img img{
+width: 70%;
+height: 30vh;
+
+}
+
+/* admin dashboard */
+
+.edit-delete-btn{
+    display: flex;
+    justify-content: center;
 }
 
